--- a/.agignore
+++ b/.agignore
@@ -1,15 +1,11 @@
-/node_modules
-/_build
-/deps
-/*.ez
-erl_crash.dump
+/node_modules/**/*
+/_build/**/*
+/deps/**/*
 /priv/static/css
 /priv/static/js
-/config/prod.secret.exs
 .DS_Store
 *.orig
 *.swo
 *.swp
-ctags
-.git
+.git/**/*
 tmp
