--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,4 +35,8 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -sg escape-time 10
+
+unbind ^Q
+bind ^Q select-pane -t :.+
