--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,10 +2,10 @@
 setw -g mode-keys vi
 set -g status-bg black
 set -g status-fg white
-set -g status-left ‘#[fg=green]#H’
+set -g status-left ""
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-styl bg=#ff6d67
 
 # Automatically set window title
 setw -g automatic-rename
@@ -13,7 +13,7 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 bind a send-prefix
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 unbind ^A
 bind ^A select-pane -t :.+
@@ -33,10 +33,23 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -sg escape-time 10
 
 unbind ^Q
 bind ^Q select-pane -t :.+
+
+bind u send-keys C-l \; run-shell "sleep .3s" \; clear-history
+
+bind v split-window -h
+bind h split-window
+
+setw -g automatic-rename on   # rename window to reflect current program
+set -g renumber-windows on    # renumber windows when a window is closed
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'dracula/tmux'
+
+run -b '~/.tmux/plugins/tpm/tpm'
