--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,5 +51,7 @@ set -g renumber-windows on    # renumber windows when a window is closed
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
+set -g @dracula-show-weather false
+set -g @dracula-show-fahrenheit false
 
 run -b '~/.tmux/plugins/tpm/tpm'
